# hometasks-tp

./: README.md
.github/workflows/: action.yml
task0/: run.sh
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.h
task3/: CMakeLists.txt  avr.cmake
task4/: CMakeLists.txt
task4/examples/: 03-main.cpp
task4/src/00-aplusb/: CMakeLists.txt
task4/src/01-simple-library/: Functions.cpp
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
